# toride

./: .gitignore  Cargo.toml  README.md
crates/toride/: Cargo.toml
crates/toride-audit/: Cargo.toml
crates/toride-audit/src/: auditd.rs  auditd_config.rs  auditd_presets.rs  auditd_rules.rs  backup.rs  cli.rs  client.rs  config.rs  diff.rs  doctor.rs  error.rs  ids.rs  integrity.rs  integrity_config.rs  integrity_parse.rs  lib.rs  logs.rs  logs_journald.rs  logs_rotation.rs  logs_rsyslog.rs  parse.rs  paths.rs  render.rs  report.rs  service.rs  spec.rs  validate.rs
crates/toride-backup/: Cargo.toml
crates/toride-backup/src/: backup.rs  borg.rs  cli.rs  client.rs  config.rs  doctor.rs  error.rs  lib.rs  main.rs  parse.rs  paths.rs  render.rs  report.rs  restic.rs  restore.rs  schedule.rs  service.rs  spec.rs  systemd.rs  validate.rs
crates/toride-cloud/: Cargo.toml
crates/toride-cloud/src/: aws.rs  cli.rs  client.rs  config.rs  detect.rs  digitalocean.rs  doctor.rs  error.rs  gcp.rs  hetzner.rs  lib.rs  main.rs  parse.rs  paths.rs  render.rs  report.rs  service.rs  spec.rs  validate.rs
crates/toride-diagnostic-types/: Cargo.toml
crates/toride-diagnostic-types/src/: error.rs  finding.rs  helpers.rs  lib.rs  render.rs  report.rs  severity.rs
crates/toride-fail2ban/: Cargo.toml  README.md
crates/toride-fail2ban/examples/: doctor_report.rs
crates/toride-fail2ban/proptest-regressions/: command.test.txt
crates/toride-fail2ban/src/: action.rs  action.test.rs  ban.rs  ban.test.rs  cli.rs  cli.test.rs  client.rs  client.test.rs  command.rs  command.test.rs  config.rs  config.test.rs  detector.rs  detector.test.rs  doctor.rs  doctor.test.rs  error.rs  error.test.rs  firewall.rs  firewall.test.rs  ini.rs  ini.test.rs  jail.rs  jail.test.rs  lib.rs  manager.rs  manager.test.rs  paths.rs  paths.test.rs  regex_test.rs  regex_test.test.rs  render.rs  render.test.rs  report.rs  report.test.rs  service.rs  service.test.rs  spec.rs  spec.test.rs  store.rs  (+5 more)
crates/toride-fs/: Cargo.toml
crates/toride-fs/src/: atomic.rs  error.rs  expand.rs  lib.rs  lock.rs  permissions.rs  read.rs
crates/toride-harden/: Cargo.toml
crates/toride-harden/src/: backup.rs  cli.rs  client.rs  config.rs  diff.rs  doctor.rs  error.rs  kernel.rs  lib.rs  main.rs  parse.rs  paths.rs  profile.rs  render.rs  report.rs  service.rs  shm.rs  spec.rs  sysctl.rs  validate.rs
crates/toride-installer/: Cargo.toml
crates/toride-installer/src/: error.rs  extract.rs  installer.rs  lib.rs  target.rs  tool.rs  tools.rs
crates/toride-installer/tests/: integration.rs
crates/toride-mise/: Cargo.toml  README.md
crates/toride-mise/src/: builder.rs  capabilities.rs  client.rs  error.rs  lib.rs  security.rs  streaming.rs
crates/toride-mise/tests/: expensive.rs  fixtures.rs  integration.rs  snapshots.rs
crates/toride-monitor/: Cargo.toml
crates/toride-monitor/src/: alert.rs  anomaly.rs  cli.rs  client.rs  config.rs  conntrack.rs  doctor.rs  error.rs  lib.rs  main.rs  output.rs  parse.rs  paths.rs  ports.rs  report.rs  service.rs  spec.rs  validate.rs
crates/toride-proxy/: Cargo.toml
crates/toride-proxy/src/: backup.rs  caddy.rs  certs.rs  certs_parse.rs  certs_renewal.rs  cli.rs  client.rs  config.rs  diff.rs  doctor.rs  error.rs  lib.rs  main.rs  nginx.rs  nginx_config.rs  nginx_headers.rs  parse.rs  paths.rs  render.rs  report.rs  service.rs  spec.rs  validate.rs  waf.rs
crates/toride-runner/: Cargo.toml
crates/toride-runner/src/: async_runner.rs  discovery.rs  display.rs  duct_runner.rs  error.rs  fake.rs  lib.rs  output.rs  output_mode.rs  parity_tests.rs  redact.rs  runner.rs  spec.rs  streaming.rs  streaming_tests.rs  tokio_runner.rs
crates/toride-service/: Cargo.toml
crates/toride-service/src/: error.rs  free_functions.rs  lib.rs  manager.rs
crates/toride-ssh/: Cargo.toml
crates/toride-ssh/src/: lib.rs  paths.rs  types.rs  undo.rs
crates/toride-ssh/tests/: integration.rs
crates/toride-status/: Cargo.toml
crates/toride-status/src/: capabilities.rs  collector.rs  daemon.rs  doctor.rs  error.rs  lib.rs  mod.rs  presets.rs  privacy.rs  provider.rs  ssh.rs  system.rs  units.rs
crates/toride-tailscale/: Cargo.toml
crates/toride-tailscale/src/: acl.rs  api.rs  cli.rs  client.rs  dns.rs  doctor.rs  error.rs  lib.rs  main.rs  netcheck.rs  parse.rs  paths.rs  render.rs  report.rs  service.rs  spec.rs  status.rs  tailnet.rs  validate.rs
crates/toride-updates/: Cargo.toml
crates/toride-updates/src/: apt.rs  backup.rs  cli.rs  client.rs  config.rs  detect.rs  dnf.rs  doctor.rs  error.rs  lib.rs  main.rs  parse.rs  paths.rs  render.rs  report.rs  schedule.rs  service.rs  spec.rs  validate.rs
crates/toride-users/: Cargo.toml
crates/toride-users/src/: backup.rs  cli.rs  client.rs  config.rs  doctor.rs  error.rs  group.rs  lib.rs  main.rs  pam.rs  parse.rs  password.rs  paths.rs  render.rs  report.rs  service.rs  spec.rs  sudo.rs  totp.rs  user.rs  validate.rs
crates/toride-wireguard/: Cargo.toml
crates/toride-wireguard/src/: backup.rs  cli.rs  client.rs  config.rs  diff.rs  doctor.rs  error.rs  key.rs  lib.rs  main.rs  net.rs  parse.rs  paths.rs  peer.rs  render.rs  report.rs  service.rs  spec.rs  validate.rs
crates/toride/examples/: disk_rates.rs  doctor.rs  gpu_status.rs  hardware_inventory.rs  network_rates.rs  privacy_safe_report.rs  simple_snapshot.rs  task_manager_loop.rs  top_processes.rs
crates/toride/src/: about_convert.rs  about_data.rs  action.rs  app.rs  fail2ban_convert.rs  fail2ban_data.rs  lib.rs  logs_convert.rs  logs_data.rs  main.rs  settings_convert.rs  settings_data.rs  ssh_convert.rs  ssh_data.rs  status_collector.rs  templates_convert.rs  templates_data.rs  tools_convert.rs  tools_data.rs  toride_audit_convert.rs  toride_audit_data.rs  toride_backup_convert.rs  toride_backup_data.rs  toride_cloud_convert.rs  toride_cloud_data.rs  toride_harden_convert.rs  toride_harden_data.rs  toride_mise_convert.rs  toride_mise_data.rs  toride_monitor_convert.rs  toride_monitor_data.rs  toride_proxy_convert.rs  toride_proxy_data.rs  (+12 more)
crates/ufw-kit/: Cargo.toml
(+582 files in other folders)
