[workspace]
members = ["crates/*", "crates/toride-ssh/crates/*"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
dirs = "6"
async-trait = "0.1"
which = "8"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
