[workspace]
members = ["crates/*", "crates/toride-ssh/crates/*"]
resolver = "3"

[workspace.dependencies]
assert_fs = "1"
async-trait = "0.1"
camino = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "1"
crossterm = "0.28"
dirs = "6"
duct = { version = "1", features = ["timeout"] }
fd-lock = "4"
fs-err = "3"
humantime = "2"
indoc = "2"
insta = { version = "1", features = ["serde"] }
ipnet = "2"
nix = { version = "0.29", features = ["user"] }
proptest = "1"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
semver = "1"
serde_json = "1"
similar = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
toml_edit = "0.23"
tracing = "0.1"
typed-builder = "0.20"
which = "8"
zeroize = "1"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
