[package]
name = "toride-cloud"
version = "0.1.0"
edition = "2024"
description = "Cloud provider security group and firewall management"
license = "MIT"

[features]
default = ["client", "doctor"]

# === Capability features ===

## Cloud provider client wrappers and command execution.
client = ["dep:duct"]

## Diagnostic engine for cloud provider installations.
doctor = ["service"]

## Service management for cloud provider agents.
service = ["client"]

## Configuration parsing and validation.
## Implies `client` because config manager uses DuctRunner.
config = ["client", "dep:regex"]

## Serde serialization for domain types.
serde = ["dep:serde", "dep:serde_json"]

## CLI argument parsing.
cli = ["dep:clap"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

# --- Optional (feature-gated) ---
duct = { version = "0.13", optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
regex = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
assert_fs = "1"
proptest = "1"

[lints]
workspace = true
