[package]
name = "toride-cloud"
version = "0.1.0"
edition = "2024"
description = "Cloud provider security group and firewall management"
license = "MIT"

[[bin]]
name = "toride-cloud"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["client", "doctor"]

# === Capability features ===

## Cloud provider client wrappers and command execution.
## Implies serde/serde_json so provider clients can parse provider CLI JSON output.
client = ["dep:duct", "dep:serde", "dep:serde_json"]

## Diagnostic engine for cloud provider installations.
doctor = ["service"]

## Service management for cloud provider agents.
service = ["client", "dep:toride-service"]

## Configuration parsing and validation.
## Implies `client` because config manager uses DuctRunner.
config = ["client", "dep:regex"]

## Serde serialization for domain types.
serde = ["dep:serde", "dep:serde_json"]

## CLI argument parsing and dispatch.
## Implies `client` and `doctor` so the dispatch layer can construct a
## `CloudClient` and run the diagnostic engine, and so the `toride-cloud`
## binary builds with a single `--features cli` flag.
cli = ["dep:clap", "client", "doctor"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
toride-runner = { path = "../toride-runner", features = ["duct-runner", "fake"] }
toride-fs = { path = "../toride-fs" }
toride-diagnostic-types = { path = "../toride-diagnostic-types" }
toride-service = { path = "../toride-service", optional = true }

# --- Optional (feature-gated) ---
duct = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
regex = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
assert_fs = "1"
proptest = "1"

[lints]
workspace = true
