[package]
name = "toride-fail2ban"
version = "0.1.0"
edition = "2024"
description = "Fail2Ban-style intrusion prevention library"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
