[package]
name = "toride-monitor"
version = "0.1.0"
edition = "2024"
description = "Outbound traffic monitoring and anomaly detection"
license = "MIT"

[features]
default = ["client", "doctor"]

# === Capability features ===

## iptables/ss/conntrack wrappers via duct runner.
client = ["dep:duct"]

## Service management for monitoring daemon.
service = ["client", "dep:toride-service"]

## Diagnostic engine for monitoring installations.
doctor = ["service"]

## Config parsing, threshold management, alert rules.
config = ["client", "dep:regex"]

## Serde serialization for spec and report types.
serde = ["dep:serde", "dep:serde_json"]

## CLI argument parsing.
cli = ["dep:clap"]

[dependencies]
# --- Always required ---
toride-runner = { path = "../toride-runner" }
toride-fs = { path = "../toride-fs" }
toride-diagnostic-types = { path = "../toride-diagnostic-types" }
toride-service = { path = "../toride-service", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

# --- Optional (feature-gated) ---
duct = { version = "1", features = ["timeout"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
regex = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
assert_fs = "1"
proptest = "1"

[lints]
workspace = true
