[package]
name = "toride-service"
version = "0.1.0"
edition = "2024"
description = "Shared systemd service management utilities"
license = "MIT"

[features]
default = ["client"]
client = ["dep:duct"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
toride-runner = { path = "../toride-runner" }
duct = { version = "1", features = ["timeout"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
proptest = "1"

[lints]
workspace = true
