[package]
name = "toride-ssh"
version = "0.1.0"
edition = "2024"

[features]
default = [
    "agent", "known-hosts", "authorized-keys",
    "doctor", "forward",
]

# Subsystem features — each simply enables the corresponding sub-crate dep.
agent = ["dep:toride-ssh-agent"]
known-hosts = ["dep:toride-ssh-known-hosts"]
authorized-keys = ["dep:toride-ssh-authorized-keys"]
doctor = ["dep:toride-ssh-doctor"]
forward = ["dep:toride-ssh-forward"]
certificate = ["dep:toride-ssh-certificate"]

# Convenience: enable everything
full = [
    "agent", "known-hosts", "authorized-keys",
    "doctor", "forward", "certificate",
]

[dependencies]
toride-ssh-core = { path = "crates/core" }
toride-ssh-config = { path = "crates/config" }
toride-ssh-key = { path = "crates/key" }
toride-ssh-agent = { path = "crates/agent", optional = true }
toride-ssh-known-hosts = { path = "crates/known-hosts", optional = true }
toride-ssh-authorized-keys = { path = "crates/authorized-keys", optional = true }
toride-ssh-doctor = { path = "crates/doctor", optional = true }
toride-ssh-forward = { path = "crates/forward", optional = true }
toride-ssh-certificate = { path = "crates/certificate", optional = true }
tokio = { workspace = true, features = ["process", "fs", "rt", "sync"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
