[package]
name = "toride-status"
version = "0.1.0"
edition = "2024"

[lib]
name = "toride_status"
path = "src/lib.rs"

[features]
default = ["sysinfo-provider"]
sysinfo-provider = []
linux-procfs = ["procfs"]
linux-sensors = ["lm-sensors"]
linux-udev = ["udev"]
linux-rtnetlink = ["rtnetlink"]
linux-cgroups = ["cgroups-rs"]
os-info = ["os_info"]
cpu-cpuid = ["raw-cpuid"]
hardware-dmi = ["dmidecode"]
hardware-pci = ["pci-info", "pci-ids"]
hardware-topology = ["hwlocality"]
gpu-nvidia = ["nvml-wrapper"]
battery = ["starship-battery"]
commands = ["dep:duct"]

[dependencies]
sysinfo = "0.35"
sysconf = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
nix = { version = "0.31", features = ["user", "signal", "fs"] }
dirs = { workspace = true }

# Optional dependencies
procfs = { version = "0.18", optional = true }
os_info = { version = "3", optional = true }
nvml-wrapper = { version = "0.10", optional = true }
starship-battery = { version = "0.8", optional = true }
dmidecode = { version = "1.0", optional = true }
raw-cpuid = { version = "11", optional = true }
hwlocality = { version = "1.0.0-alpha.12", optional = true }
pci-info = { version = "0.2", optional = true }
pci-ids = { version = "0.2", optional = true }
cgroups-rs = { version = "0.5", optional = true }
duct = { version = "0.13", optional = true }
lm-sensors = { version = "0.1", optional = true }
udev = { version = "0.8", optional = true }
rtnetlink = { version = "0.14", optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"

[lints]
workspace = true
